# pep-cprep

./: CMakeLists.txt  README.md
include/cprep/: cprep.hpp
src/: cprep.cpp  evaluate.cpp  evaluate.hpp  tokenize.cpp  tokenize.hpp  unicode_ident.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  common.hpp  test.cpp  test2.cpp  test_calc.cpp  test_include.cpp  test_loc.cpp  test_other.cpp  test_replace.cpp
